@@ -619,19 +619,18 @@ public class Store implements HConstants, HeapSize {
    * thread must be able to block for long periods.
    * 
    * <p>During this time, the Store can work as usual, getting values from
-   * MapFiles and writing new MapFiles from the memstore.
+   * StoreFiles and writing new StoreFiles from the memstore.
    * 
-   * Existing MapFiles are not destroyed until the new compacted TreeMap is 
+   * Existing StoreFiles are not destroyed until the new compacted StoreFile is 
    * completely written-out to disk.
    *
-   * The compactLock prevents multiple simultaneous compactions.
+   * <p>The compactLock prevents multiple simultaneous compactions.
    * The structureLock prevents us from interfering with other write operations.
    * 
-   * We don't want to hold the structureLock for the whole time, as a compact() 
+   * <p>We don't want to hold the structureLock for the whole time, as a compact() 
    * can be lengthy and we want to allow cache-flushes during this period.
    * 
-   * @param mc True to force a major compaction regardless of
-   * thresholds
+   * @param mc True to force a major compaction regardless of thresholds
    * @return row to split around if a split is needed, null otherwise
    * @throws IOException
    */
@@ -639,29 +638,32 @@ public class Store implements HConstants, HeapSize {
     boolean forceSplit = this.regioninfo.shouldSplit(false);
     boolean majorcompaction = mc;
     synchronized (compactLock) {
-      long maxId = -1;
       // filesToCompact are sorted oldest to newest.
-      List<StoreFile> filesToCompact = null;
-      filesToCompact = new ArrayList<StoreFile>(this.storefiles.values());
-      if (filesToCompact.size() <= 0) {
+      List<StoreFile> filesToCompact =
+        new ArrayList<StoreFile>(this.storefiles.values());
+      if (filesToCompact.isEmpty()) {
         LOG.debug(this.storeNameStr + ": no store files to compact");
         return null;
       }
-      // The max-sequenceID in any of the to-be-compacted TreeMaps is the 
-      // last key of storefiles.
-      maxId = this.storefiles.lastKey().longValue();
+
+      // Max-sequenceID is the last key of the storefiles TreeMap
+      long maxId = this.storefiles.lastKey().longValue();
+
       // Check to see if we need to do a major compaction on this region.
       // If so, change doMajorCompaction to true to skip the incremental
       // compacting below. Only check if doMajorCompaction is not true.
       if (!majorcompaction) {
         majorcompaction = isMajorCompaction(filesToCompact);
       }
+
       boolean references = hasReferences(filesToCompact);
       if (!majorcompaction && !references && 
           (forceSplit || (filesToCompact.size() < compactionThreshold))) {
         return checkSplit(forceSplit);
       }
-      if (!fs.exists(this.regionCompactionDir) && !fs.mkdirs(this.regionCompactionDir)) {
+
+      if (!fs.exists(this.regionCompactionDir) &&
+          !fs.mkdirs(this.regionCompactionDir)) {
         LOG.warn("Mkdir on " + this.regionCompactionDir.toString() + " failed");
         return checkSplit(forceSplit);
       }
@@ -670,7 +672,7 @@ public class Store implements HConstants, HeapSize {
       // selection.
       int countOfFiles = filesToCompact.size();
       long totalSize = 0;
-      long[] fileSizes = new long[countOfFiles];
+      long [] fileSizes = new long[countOfFiles];
       long skipped = 0;
       int point = 0;
       for (int i = 0; i < countOfFiles; i++) {
@@ -689,6 +691,7 @@ public class Store implements HConstants, HeapSize {
         fileSizes[i] = len;
         totalSize += len;
       }
+ 
       if (!majorcompaction && !references) {
         // Here we select files for incremental compaction.  
         // The rule is: if the largest(oldest) one is more than twice the 
@@ -719,26 +722,17 @@ public class Store implements HConstants, HeapSize {
         }
       }
  
-      // Step through them, writing to the brand-new file
-      HFile.Writer writer = getWriter(this.regionCompactionDir);
-      if (LOG.isDebugEnabled()) {
-        LOG.debug("Started compaction of " + filesToCompact.size() + " file(s)" +
-          (references? ", hasReferences=true,": " ") + " into " +
-          FSUtils.getPath(writer.getPath()));
-      }
-      try {
-        compact(writer, filesToCompact, majorcompaction);
-      } finally {
-        // Now, write out an HSTORE_LOGINFOFILE for the brand-new TreeMap.
-        StoreFile.appendMetadata(writer, maxId, majorcompaction);
-        writer.close();
-      }
-
+      // Ready to go.  Have list of files to compact.
+      LOG.debug("Started compaction of " + filesToCompact.size() + " file(s)" +
+        (references? ", hasReferences=true,": " ") + " into " +
+          FSUtils.getPath(this.regionCompactionDir) + ", seqid=" + maxId);
+      HFile.Writer writer = compact(filesToCompact, majorcompaction, maxId);
       // Move the compaction into place.
-      completeCompaction(filesToCompact, writer);
+      StoreFile sf = completeCompaction(filesToCompact, writer);
       if (LOG.isDebugEnabled()) {
         LOG.debug("Completed" + (majorcompaction? " major ": " ") +
           "compaction of " + this.storeNameStr +
+          "; new storefile is " + (sf == null? "none": sf.toString()) +
           "; store size is " + StringUtils.humanReadableInt(storeSize));
       }
     }
@@ -834,16 +828,17 @@ public class Store implements HConstants, HeapSize {
    * @param writer output writer
    * @param filesToCompact which files to compact
    * @param majorCompaction true to major compact (prune all deletes, max versions, etc)
+   * @param maxId Readers maximum sequence id.
+   * @return Product of compaction or null if all cells expired or deleted and
+   * nothing made it through the compaction.
    * @throws IOException
    */
-  private void compact(HFile.Writer writer,
-                       List<StoreFile> filesToCompact,
-                       boolean majorCompaction) throws IOException {
-    // for each file, obtain a scanner:
+  private HFile.Writer compact(final List<StoreFile> filesToCompact,
+      final boolean majorCompaction, final long maxId)
+  throws IOException {
+    // For each file, obtain a scanner:
     KeyValueScanner [] scanners = new KeyValueScanner[filesToCompact.size()];
-    // init:
     for (int i = 0; i < filesToCompact.size(); ++i) {
-      // TODO open a new HFile.Reader w/o block cache.
       Reader r = filesToCompact.get(i).getReader();
       if (r == null) {
         LOG.warn("StoreFile " + filesToCompact.get(i) + " has a null Reader");
@@ -853,82 +848,97 @@ public class Store implements HConstants, HeapSize {
       scanners[i] = new StoreFileScanner(r.getScanner(false));
     }
 
+    // Make the instantiation lazy in case compaction produces no product; i.e.
+    // where all source cells are expired or deleted.
+    HFile.Writer writer = null;
+    try {
     if (majorCompaction) {
       InternalScanner scanner = null;
-
       try {
         Scan scan = new Scan();
         scan.setMaxVersions(family.getMaxVersions());
         scanner = new StoreScanner(this, scan, scanners);
-
         // since scanner.next() can return 'false' but still be delivering data,
         // we have to use a do/while loop.
-        ArrayList<KeyValue> row = new ArrayList<KeyValue>();
+        ArrayList<KeyValue> kvs = new ArrayList<KeyValue>();
         boolean more = true;
-        while ( more ) {
-          more = scanner.next(row);
+        while (more) {
+          more = scanner.next(kvs);
           // output to writer:
-          for (KeyValue kv : row) {
+          for (KeyValue kv : kvs) {
+            if (writer == null) writer = getWriter(this.regionCompactionDir);
             writer.append(kv);
           }
-          row.clear();
+          kvs.clear();
         }
       } finally {
-        if (scanner != null)
-          scanner.close();
+        if (scanner != null) scanner.close();
       }
     } else {
       MinorCompactingStoreScanner scanner = null;
       try {
         scanner = new MinorCompactingStoreScanner(this, scanners);
-
-        while ( scanner.next(writer) ) { }
+        writer = getWriter(this.regionCompactionDir);
+        while (scanner.next(writer)) {
+          // Nothing to do
+        }
       } finally {
         if (scanner != null)
           scanner.close();
       }
     }
-
+    } finally {
+      if (writer != null) {
+        StoreFile.appendMetadata(writer, maxId, majorCompaction);
+        writer.close();
+      }
+    }
+    return writer;
   }
 
   /*
    * It's assumed that the compactLock  will be acquired prior to calling this 
    * method!  Otherwise, it is not thread-safe!
    *
-   * It works by processing a compaction that's been written to disk.
+   * <p>It works by processing a compaction that's been written to disk.
    * 
    * <p>It is usually invoked at the end of a compaction, but might also be
    * invoked at HStore startup, if the prior execution died midway through.
    * 
    * <p>Moving the compacted TreeMap into place means:
    * <pre>
-   * 1) Moving the new compacted MapFile into place
-   * 2) Unload all replaced MapFiles, close and collect list to delete.
+   * 1) Moving the new compacted StoreFile into place
+   * 2) Unload all replaced StoreFile, close and collect list to delete.
    * 3) Loading the new TreeMap.
    * 4) Compute new store size
    * </pre>
    * 
    * @param compactedFiles list of files that were compacted
-   * @param compactedFile HStoreFile that is the result of the compaction
+   * @param compactedFile StoreFile that is the result of the compaction
+   * @return StoreFile created. May be null.
    * @throws IOException
    */
-  private void completeCompaction(final List<StoreFile> compactedFiles,
+  private StoreFile completeCompaction(final List<StoreFile> compactedFiles,
     final HFile.Writer compactedFile)
   throws IOException {
-    // 1. Moving the new files into place.
-    Path p = null;
-    try {
-      p = StoreFile.rename(this.fs, compactedFile.getPath(),
-        StoreFile.getRandomFilename(fs, this.homedir));
-    } catch (IOException e) {
-      LOG.error("Failed move of compacted file " + compactedFile.getPath(), e);
-      return;
+    // 1. Moving the new files into place -- if there is a new file (may not
+    // be if all cells were expired or deleted).
+    StoreFile result = null;
+    if (compactedFile != null) {
+      Path p = null;
+      try {
+        p = StoreFile.rename(this.fs, compactedFile.getPath(),
+          StoreFile.getRandomFilename(fs, this.homedir));
+      } catch (IOException e) {
+        LOG.error("Failed move of compacted file " + compactedFile.getPath(), e);
+        return null;
+      }
+      result = new StoreFile(this.fs, p, blockcache, this.conf, this.inMemory);
     }
-    StoreFile finalCompactedFile = new StoreFile(this.fs, p, blockcache, 
-      this.conf, this.inMemory);
     this.lock.writeLock().lock();
     try {
       try {
+        // 2. Unloading
         // 3. Loading the new TreeMap.
         // Change this.storefiles so it reflects new state but do not
         // delete old store files until we have sent out notification of
@@ -939,10 +949,12 @@ public class Store implements HConstants, HeapSize {
             this.storefiles.remove(e.getKey());
           }
         }
-        // Add new compacted Reader and store file.
-        Long orderVal = Long.valueOf(finalCompactedFile.getMaxSequenceId());
-        this.storefiles.put(orderVal, finalCompactedFile);
-        // Tell observers that list of Readers has changed.
+        // If a StoreFile result, move it into place.  May be null.
+        if (result != null) {
+          Long orderVal = Long.valueOf(result.getMaxSequenceId());
+          this.storefiles.put(orderVal, result);
+        }
+        // Tell observers that list of StoreFiles has changed.
         notifyChangedReadersObservers();
         // Finally, delete old store files.
         for (StoreFile hsf: compactedFiles) {
@@ -950,11 +962,10 @@ public class Store implements HConstants, HeapSize {
         }
       } catch (IOException e) {
         e = RemoteExceptionHandler.checkIOException(e);
-        LOG.error("Failed replacing compacted files for " +
-            this.storeNameStr +
-            ". Compacted file is " + finalCompactedFile.toString() +
-            ".  Files replaced are " + compactedFiles.toString() +
-            " some of which may have been already removed", e);
+        LOG.error("Failed replacing compacted files in " + this.storeNameStr +
+          ". Compacted file is " + (result == null? "none": result.toString()) +
+          ".  Files replaced " + compactedFiles.toString() +
+          " some of which may have been already removed", e);
       }
       // 4. Compute new store size
       this.storeSize = 0L;
@@ -969,6 +980,7 @@ public class Store implements HConstants, HeapSize {
     } finally {
       this.lock.writeLock().unlock();
     }
+    return result;
   }
 
   // ////////////////////////////////////////////////////////////////////////////
